deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-deployment
  namespace: flask
  labels:
    app: flask-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask-app
  template:
    metadata:
      labels:
        app: flask-app
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/arch
                operator: In
                values:
                - amd64
                - arm64
      containers:
      - name: flask-container
        image: 638151711596.dkr.ecr.ap-south-1.amazonaws.com/flask-eks:latest
        ports:
        - name: http
          containerPort: 3000
        imagePullPolicy: IfNotPresent
      nodeSelector:
        kubernetes.io/os: linux
