service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-service
  namespace: flask
  labels:
    app: flask-app
spec:
  selector:
    app: flask-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
